# AXION-ECUSim-MS

./: .gitignore  NOTICE.md  README.md  README_AXION-ECUSim-MS.md  README_TERMUX.txt  RUN_ANDROID.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_android.sh  run_termux.sh  sitecustomize.py  tools_can_spam_5s.py  tools_can_spam_param.py  tools_canbus_termux_test.py  tools_print_paths.py  tools_termux_probe.py  tools_termux_send1.py  tools_termux_transport2_test.py  tools_transport_send_test.py  usb_fd_test.py
_meta/: created_utc.txt  file_list.txt  included_roots.txt
data/: control.json  telemetry.json
scripts/: check.ps1  format.ps1  run_cli.ps1  run_gui.ps1  setup.ps1  stop.ps1
src/ecusim_ms/: __init__.py  bitrate.py  can_bus.py  cli_runner.py  config_merge.py  control_override.py  gui_can_monitor.py  gui_control_writer.py  gui_hard_test.py  gui_live_view.py  gui_telemetry_reader.py  gui_widgets.py  models.py  ms_signals.py  ms_tx.py  runner_process.py  scenarios.py  sniffer.py  tx_log.py  ui_backend.py  web_ui.py  web_ui.py.bak_hardstop
src/ecusim_ms.bak_telemetry_20260208_032330/: can_bus.py  can_monitor.py  cli_runner.py  control_io.py  dbc_codec.py  dbc_loader.py  gui_app.py  gui_custom_editor.py  gui_logger.py  gui_mobile.py  gui_paths.py  paths.py  runner_process.py  scenarios.py  scheduler.py  selftest.py  stop_flag.py  telemetry.py  transport.py  transport.py.bak  usb_backend.py  validate.py  version.py
src/ecusim_ms.bak_telemetry_20260208_032330/transports/: termux_libusb_slcan.py
